data/all_generated_tests/raw_wast_tests/return_TypeMismatchinControlFlowInstructions_3011.wast
;; 10. **Control Flow with Varying Type States**:    - Design a more complex control flow structure with mixed-type handling (`i32`, `f32`) and ensure the `return` instruction is met with the expected type despite transitions.    - **Constraint:** Validates the type state transitions through complex control flows fully comply with return types.    - **Type Mismatch:** Confirms that the intricate mix of types through control flow doesn't result in type mismatches at the return point.

(assert_invalid
  (module
    (func $mixed-type-control-flow (param i32) (result f32)
      (local f32)
      (local.set 1 (f32.const 0.0))
      (block $exit
        (if (i32.eq (local.get 0) (i32.const 0))
          (return (local.get 1)) 
        )
        (drop (i32.const 1))
        (return (local.get 1)) 
      )
    )
  )
  "type mismatch"
)